--- a/sass/pages/home/_footer.scss
+++ b/sass/pages/home/_footer.scss
@@ -3,7 +3,6 @@
   grid-column: ml-end / mr-start;
   grid-row: footer-start / footer-end;
   margin-top: 5rem;
-  z-index: 2;
 
   &__upper {
     padding-left: 3rem;
